--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Airpods Pro - Apple (IN) | Anushka Chauhan</title>
+    <title>UIC-MIS-7450</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="assets/favicon.ico" />
@@ -66,94 +66,6 @@
         </div>
       </section>
 
-<!--       <section class="section-04 static-section explode-tips"> -->
-<!--         <div class="section-04-1"> -->
-<!--           <img -->
-<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0000.jpg" -->
-<!--             alt="" -->
-<!--           /> -->
-<!--           <div class="text"> -->
-<!--             We refined the details of comfort, creating a new class of in-ear -->
-<!--             headphones with a customisable fit that forms an exceptional seal -->
-<!--             for Active Noise Cancellation. You'll feel your music, not your -->
-<!--             headphones. -->
-<!--           </div> -->
-<!--         </div> -->
-
-<!--         <div class="section-04-2"> -->
-<!--           <img -->
-<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0080.jpg" -->
-<!--             alt="" -->
-<!--           /> -->
-<!--           <div class="text"> -->
-<!--             Choose from three sizes of soft, flexible silicone tips that click -->
-<!--             into place. Find the best fit — and get the best sound — by using -->
-<!--             the Ear Tip Fit Test. -->
-<!--           </div> -->
-<!--         </div> -->
-
-<!--         <div class="section-04-3"> -->
-<!--           <img -->
-<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/04-explode-tips/0138.jpg" -->
-<!--             alt="" -->
-<!--           /> -->
-<!--           <div class="text"> -->
-<!--             These internally tapered tips conform to your ear shape, keeping -->
-<!--             AirPods Pro secure. And with vents helping equalise pressure, you -->
-<!--             feel like there's nothing in your ears. -->
-<!--           </div> -->
-<!--         </div> -->
-<!--       </section> -->
-
-<!--       <section class="section-05 static-section flip-for-nc"> -->
-<!--         <div class="section-05-1"> -->
-<!--           <img -->
-<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0026.jpg" -->
-<!--             alt="" -->
-<!--           /> -->
-<!--           <div class="text"> -->
-<!--             <p>Active Noise Cancellation</p> -->
-<!--             <h1> -->
-<!--               Sound that cuts <br /> -->
-<!--               out the noise. -->
-<!--             </h1> -->
-<!--           </div> -->
-<!--         </div> -->
-
-<!--         <div class="section-05-2"> -->
-<!--           <img -->
-<!--             src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/05-flip-for-nc/0054.jpg" -->
-<!--             alt="" -->
-<!--           /> -->
-<!--           <div class="text"> -->
-<!--             AirPods Pro are the only in-ear headphones with Active Noise -->
-<!--             Cancellation that continuously adapts to the geometry of your ear -->
-<!--             and the fit of the ear tips — blocking out the world so you can -->
-<!--             focus on what you're listening to. -->
-<!--           </div> -->
-<!--         </div> -->
-<!--       </section> -->
-
-<!--       <section class="section-06 static-section transparency-head"> -->
-<!--         <img -->
-<!--           src="https://www.apple.com/105/media/us/airpods-pro/2019/1299e2f5_9206_4470_b28e_08307a42f19b/anim/sequence/large/06-transparency-head/0008.jpg" -->
-<!--           alt="" -->
-<!--         /> -->
-<!--         <div class="text"> -->
-<!--           <p> -->
-<!--             Want to hear what's happening around you? Just press and hold the -->
-<!--             force sensor on the stem to move between Active Noise Cancellation -->
-<!--             and Transparency mode — which lets outside sound in, and allows -->
-<!--             things to sound and feel natural when you're talking to people -->
-<!--             nearby. -->
-<!--           </p> -->
-<!--           <p> -->
-<!--             And when you're talking face to face with someone in a noisy -->
-<!--             environment, Conversation Boost helps you hear more clearly by -->
-<!--             focusing on the sound of the person directly in front of you. -->
-<!--           </p> -->
-<!--         </div> -->
-<!--       </section> -->
     </main>
 
     <footer>
@@ -194,7 +106,8 @@
 
         // 当滚动到底部时，延迟执行页面跳转
         setTimeout(function() {
-          window.location.href = 'one-music-gh-pages/index1.html'; // 替换为你要跳转的URL
+          // window.location.href = 'one-music-gh-pages/index1.html';
+          window.location.href = 'one-music-gh-pages/login.html';
         }, 1000);
       }
     });
