--- a/one-music-gh-pages/index1.html
+++ b/one-music-gh-pages/index1.html
@@ -65,57 +65,89 @@
             </div>
 
             <!-- Nav Start -->
-            <div class="classynav">
-              <ul>
-                <li><a href="index1.html">Home</a></li>
-                <li><a href="albums-store.html">Albums</a></li>
-                <li><a href="#">Pages</a>
-                  <ul class="dropdown">
-                    <li><a href="index1.html">Home</a></li>
-                    <li><a href="albums-store.html">Albums</a></li>
-                    <li><a href="event.html">Events</a></li>
-                    <li><a href="blog.html">News</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="elements.html">Elements</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Even Dropdown</a></li>
-                        <li><a href="#">Even Dropdown</a></li>
-                        <li><a href="#">Even Dropdown</a></li>
-                        <li><a href="#">Even Dropdown</a>
-                          <ul class="dropdown">
-                            <li><a href="#">Deeply Dropdown</a></li>
-                            <li><a href="#">Deeply Dropdown</a></li>
-                            <li><a href="#">Deeply Dropdown</a></li>
-                            <li><a href="#">Deeply Dropdown</a></li>
-                            <li><a href="#">Deeply Dropdown</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="#">Even Dropdown</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="event.html">Events</a></li>
-                <li><a href="blog.html">News</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
+            <div class="oneMusic-main-menu">
+              <div class="classy-nav-container breakpoint-off">
+                <div class="container">
+                  <!-- Menu -->
+                  <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
-              <!-- Login/Register & Cart Button -->
-              <div class="login-register-cart-button d-flex align-items-center">
-                <!-- Login/Register -->
-                <div class="login-register-btn mr-50">
-                  <a href="login.html" id="loginBtn">Login / Register</a>
-                </div>
+                    <!-- Nav brand -->
+                    <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
 
-                <!-- Cart Button -->
-                <div class="cart-btn">
-                  <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
-                  <button class="toggle-audio">Stop</button>
+                    <!-- Navbar Toggler -->
+                    <div class="classy-navbar-toggler">
+                      <span class="navbarToggler"><span></span><span></span><span></span></span>
+                    </div>
+
+                    <!-- Menu -->
+                    <div class="classy-menu">
+
+                      <!-- Close Button -->
+                      <div class="classycloseIcon">
+                        <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                      </div>
+
+                      <!-- Nav Start -->
+                      <div class="classynav">
+                        <ul>
+                          <li><a href="index1.html">Home</a></li>
+                          <li><a href="albums-store.html">Albums</a></li>
+                          <!--                                     <li><a href="#">Pages</a> -->
+                          <!--                                         <ul class="dropdown"> -->
+                          <!--                                             <li><a href="index1.html">Home</a></li> -->
+                          <!--                                             <li><a href="albums-store.html">Albums</a></li> -->
+                          <!--                                             <li><a href="event.html">Events</a></li> -->
+                          <!--                                             <li><a href="blog.html">News</a></li> -->
+                          <!--                                             <li><a href="contact.html">Contact</a></li> -->
+                          <!--                                             <li><a href="elements.html">Elements</a></li> -->
+                          <!--                                             <li><a href="login.html">Login</a></li> -->
+                          <!--                                             <li><a href="#">Dropdown</a> -->
+                          <!--                                                 <ul class="dropdown"> -->
+                          <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                          <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                          <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                          <!--                                                     <li><a href="#">Even Dropdown</a> -->
+                          <!--                                                         <ul class="dropdown"> -->
+                          <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                          <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                          <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                          <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                          <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                          <!--                                                         </ul> -->
+                          <!--                                                     </li> -->
+                          <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                          <!--                                                 </ul> -->
+                          <!--                                             </li> -->
+                          <!--                                         </ul> -->
+                          <!--                                     </li> -->
+                          <li><a href="event.html">Events</a></li>
+                          <li><a href="blog.html">News</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                        </ul>
+
+                        <!-- Login/Register & Cart Button -->
+                        <div class="login-register-cart-button d-flex align-items-center">
+                          <!-- Login/Register -->
+                          <div class="login-register-btn mr-50">
+                            <a href="login.html" id="loginBtn">xiongqiang@qq.com</a>
+                          </div>
+
+                          <!-- Cart Button -->
+                          <div class="cart-btn">
+                            <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
+                            <button class="toggle-audio">Pause</button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <!-- Nav End -->
+
+                    </div>
+                  </nav>
                 </div>
               </div>
             </div>
+
             <!-- Nav End -->
 
           </div>
@@ -155,7 +187,7 @@
       <!-- Slide Content -->
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-8">
             <div class="hero-slides-content text-center">
               <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6>
               <h2 data-animation="fadeInUp" data-delay="300ms">Colorlib Music <span>Colorlib Music</span></h2>
@@ -176,18 +208,15 @@
     <div class="row">
       <div class="col-12">
         <div class="section-heading style-2">
-          <p>See what’s new</p>
-          <h2>Latest Albums</h2>
+          <p>Introducing</p>
+          <h2>About UIC</h2>
         </div>
       </div>
     </div>
     <div class="row justify-content-center">
       <div class="col-12 col-lg-9">
         <div class="ablums-text text-center mb-70">
-          <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce
-             nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus
-             nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et
-             non eros.</p>
+          <p>In a groundbreaking full-scale collaboration in higher education between the Chinese mainland and Hong Kong, Beijing Normal University-Hong Kong Baptist University United International College (UIC) was established in 2005. Situated in Zhuhai City within the thriving Guangdong-Hong Kong-Macao Greater Bay Area, UIC stands as the first modern college in the Chinese mainland to champion a liberal arts education. UIC is committed to enriching the higher education landscape and fostering students who possess professional acumen, whole-person development, a deep understanding of China and a global outlook.</p>
         </div>
       </div>
     </div>
@@ -937,69 +966,7 @@ window.addEventListener('beforeunload', function () {
   }, document.title)
 })
 
-// document.addEventListener('DOMContentLoaded', function() {
-//   // 创建音频元素
-//   var audio = new Audio('./audio/we_are_the_world.mp3');
-//   audio.src = './audio/we_are_the_world.mp3';
-//   audio.autoplay = true;
-//   audio.loop = true; // 如果需要循环播放
-//
-//   // 初始化播放/暂停按钮
-//   let toggleButton = document.querySelector('.toggle-audio');
-//
-//   // 设置音频播放状态
-//   var isPlaying = true;
-//
-//   // 初始化播放器
-//   initAudioPlayer(audio, toggleButton);
-//
-//   function initAudioPlayer(audioElement, buttonElement) {
-//     // 静默播放音频
-//     audioElement.muted = true;
-//     audioElement.play().catch(function(error) {
-//       console.error('Audio playback failed:', error);
-//     });
-//
-//     // 播放/暂停音频
-//     buttonElement.addEventListener('click', function() {
-//       if (isPlaying) {
-//         audioElement.pause();
-//         buttonElement.textContent = 'Play';
-//         isPlaying = false;
-//       } else {
-//         playAudio();
-//         buttonElement.textContent = 'Pause';
-//         isPlaying = true;
-//       }
-//     });
-//
-//     // 在首次用户交互时恢复音量
-//     let firstInteraction = true;
-//     window.addEventListener('click', function() {
-//       if (firstInteraction) {
-//         firstInteraction = false;
-//         playAudio();
-//       }
-//     });
-//
-//     // 恢复音量并播放音频
-//     function playAudio() {
-//       audioElement.muted = false;
-//       audioElement.volume = 1;
-//       audioElement.play().catch(function(error) {
-//         console.error('Audio playback failed:', error);
-//         // 尝试解决静音策略问题
-//         if (!audioElement.muted && !audioElement.paused) {
-//           // 播放无声的一小段音频，然后播放主音频
-//           audioElement.volume = 0;
-//           audioElement.play().then(function() {
-//             audioElement.volume = 1;
-//           });
-//         }
-//       });
-//     }
-//   }
-// });
+
 </script>
 </body>
 
