--- a/one-music-gh-pages/elements.html
+++ b/one-music-gh-pages/elements.html
@@ -56,57 +56,57 @@
                             </div>
 
                             <!-- Nav Start -->
-                            <div class="classynav">
-                                <ul>
-                                    <li><a href="index1.html">Home</a></li>
-                                    <li><a href="albums-store.html">Albums</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="index1.html">Home</a></li>
-                                            <li><a href="albums-store.html">Albums</a></li>
-                                            <li><a href="event.html">Events</a></li>
-                                            <li><a href="blog.html">News</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
-                                            <li><a href="login.html">Login</a></li>
-                                            <li><a href="#">Dropdown</a>
-                                                <ul class="dropdown">
-                                                    <li><a href="#">Even Dropdown</a></li>
-                                                    <li><a href="#">Even Dropdown</a></li>
-                                                    <li><a href="#">Even Dropdown</a></li>
-                                                    <li><a href="#">Even Dropdown</a>
-                                                        <ul class="dropdown">
-                                                            <li><a href="#">Deeply Dropdown</a></li>
-                                                            <li><a href="#">Deeply Dropdown</a></li>
-                                                            <li><a href="#">Deeply Dropdown</a></li>
-                                                            <li><a href="#">Deeply Dropdown</a></li>
-                                                            <li><a href="#">Deeply Dropdown</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li><a href="#">Even Dropdown</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="event.html">Events</a></li>
-                                    <li><a href="blog.html">News</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
+                          <div class="classynav">
+                            <ul>
+                              <li><a href="index1.html">Home</a></li>
+                              <li><a href="albums-store.html">Albums</a></li>
+                              <!--                                     <li><a href="#">Pages</a> -->
+                              <!--                                         <ul class="dropdown"> -->
+                              <!--                                             <li><a href="index1.html">Home</a></li> -->
+                              <!--                                             <li><a href="albums-store.html">Albums</a></li> -->
+                              <!--                                             <li><a href="event.html">Events</a></li> -->
+                              <!--                                             <li><a href="blog.html">News</a></li> -->
+                              <!--                                             <li><a href="contact.html">Contact</a></li> -->
+                              <!--                                             <li><a href="elements.html">Elements</a></li> -->
+                              <!--                                             <li><a href="login.html">Login</a></li> -->
+                              <!--                                             <li><a href="#">Dropdown</a> -->
+                              <!--                                                 <ul class="dropdown"> -->
+                              <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                              <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                              <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                              <!--                                                     <li><a href="#">Even Dropdown</a> -->
+                              <!--                                                         <ul class="dropdown"> -->
+                              <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                              <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                              <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                              <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                              <!--                                                             <li><a href="#">Deeply Dropdown</a></li> -->
+                              <!--                                                         </ul> -->
+                              <!--                                                     </li> -->
+                              <!--                                                     <li><a href="#">Even Dropdown</a></li> -->
+                              <!--                                                 </ul> -->
+                              <!--                                             </li> -->
+                              <!--                                         </ul> -->
+                              <!--                                     </li> -->
+                              <li><a href="event.html">Events</a></li>
+                              <li><a href="blog.html">News</a></li>
+                              <li><a href="contact.html">Contact</a></li>
+                            </ul>
 
-                                <!-- Login/Register & Cart Button -->
-                                <div class="login-register-cart-button d-flex align-items-center">
-                                    <!-- Login/Register -->
-                                    <div class="login-register-btn mr-50">
-                                        <a href="login.html" id="loginBtn">Login / Register</a>
-                                    </div>
+                            <!-- Login/Register & Cart Button -->
+                            <div class="login-register-cart-button d-flex align-items-center">
+                              <!-- Login/Register -->
+                              <div class="login-register-btn mr-50">
+                                <a href="login.html" id="loginBtn">xiongqiang@qq.com</a>
+                              </div>
 
-                                    <!-- Cart Button -->
-                                  <div class="cart-btn">
-                                    <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
-                                    <button class="toggle-audio">Pause</button>
-                                  </div>
-                                </div>
+                              <!-- Cart Button -->
+                              <div class="cart-btn">
+                                <!--                                         <p><span class="icon-shopping-cart"></span> <span class="quantity">=</span></p> -->
+                                <button class="toggle-audio">Pause</button>
+                              </div>
                             </div>
+                          </div>
                             <!-- Nav End -->
 
                         </div>
